# fahimni

./: .env.example  .gitignore  FRONTEND_TESTING_GUIDE.md  LANDING_PAGE_README.md  README.md  docker-compose.yml  main.py  pyproject.toml
.chroma/: chroma.sqlite3
alembic/: env.py
alembic/versions/: 1d9f2bafc1a0_add_material_archive_progress_event_tables.py  45a2d4888a6b_create_users_table.py  969fd146ec67_add_academic_domain_tables.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: LandingPage.jsx
frontend/src/lib/: api.js
frontend/src/styles/: landing.css
postman/: fahimni.postman_collection.json
src/fahimni/: main.py
src/fahimni/agents/: __init__.py  academic_agent.py  evaluator_agent.py  ocr_agent.py  orchestrator_agent.py  planner_agent.py  quiz_agent.py  search_agent.py  tutor_agent.py
src/fahimni/api/v1/: __init__.py  ai.py  announcements.py  auth.py  courses.py  grades.py  materials.py  messages.py
src/fahimni/core/: celery_app.py  config.py  dependencies.py  security.py
src/fahimni/db/: base.py  session.py
src/fahimni/db/repositories/: __init__.py  announcement_repository.py  course_repository.py  grade_repository.py  material_repository.py  message_repository.py  user_repository.py
src/fahimni/models/: __init__.py  announcement.py  archive_resource.py  assignment.py  course.py  course_material.py  enrollment.py  grade.py  learning_event.py  message.py  user.py  user_progress.py
src/fahimni/schemas/: __init__.py  ai.py  announcement.py  auth.py  common.py  course.py  grade.py  material.py  message.py
src/fahimni/scripts/: __init__.py  demo_workflow.py
src/fahimni/services/: ai_service.py  storage_service.py  tasks.py
tests/: conftest.py  test_agents.py  test_ai_endpoints.py  test_demo_workflow.py  test_health.py  test_security.py
