[project]
name = "fahimni"
version = "0.1.0"
description = "AI-powered professor-student academic platform"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # AI
    "chromadb>=0.5.0",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=0.3.2",
    "huggingface-hub>=0.26.0",
    "fastembed>=0.4.2",
    "rank-bm25>=0.2.2",
    "pypdf>=5.1.0",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    # Jobs
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # Files
    "boto3>=1.35.0",
    # HTTP
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
    "types-boto3>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fahimni"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/fahimni"]